# CUE4Parse

./: COMMIT_SUMMARY.md  CUE4Parse.sln  build.ps1
CUE4Parse-Natives/: cue4parse_c_api.h
CUE4Parse.CLI/: CUE4Parse.CLI.csproj  Program.cs
cue4parse-rs/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  PHASE3_SUMMARY.md  PHASE_IMPLEMENTATION_SUMMARY.md  README.md  STOVE_COMPATIBILITY.md  STOVE_COMPATIBILITY_COMPLETE.md  STOVE_UNREALMODDING_COMPATIBILITY.md  UNREAL_ASSET_MIGRATION.md  build.rs  compatibility_audit.md  stove_compatibility_fixes.patch  test_oblivion.bat  test_oblivion.sh  wrapper.h
cue4parse-rs/examples/: basic_usage.rs  phase3_demo.rs  phase3_working_demo.rs  real_world_test.rs  stove_compat.rs  stove_unrealmodding_compat.rs  unreal_asset_compat.rs
cue4parse-rs/src/: lib.rs  unreal_asset.rs
cue4parse-rs/src/unreal_asset/: containers.rs  error.rs  exports.rs  mod.rs  properties.rs  reader.rs  types.rs  unversioned.rs  versions.rs
cue4parse-rs/tests/: integration_test.rs
