[package]
name = "cue4parse-rs"
version = "0.1.0"
edition = "2021"
authors = ["CUE4Parse Contributors"]
description = "Rust FFI bindings for CUE4Parse - Parse and extract Unreal Engine assets"
documentation = "https://docs.rs/cue4parse-rs"
readme = "README.md"
homepage = "https://github.com/FabianFG/CUE4Parse"
repository = "https://github.com/FabianFG/CUE4Parse"
license = "MIT OR Apache-2.0"
keywords = ["unreal", "engine", "assets", "parsing", "gamedev"]
categories = ["game-development", "parser-implementations", "api-bindings"]
exclude = [
    "target/",
    ".git/",
    "*.log",
]

[dependencies]
libc = "0.2.151"
thiserror = "1.0.56"
netcorehost = { version = "0.13", optional = true }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[build-dependencies]
bindgen = "0.69.4"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "cue4parse_rs"
crate-type = ["lib"]

[features]
default = ["native-lib"]
native-lib = []
dotnet-interop = ["netcorehost"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
dotnet-interop = ["netcorehost"]
